# jobs

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  justfile  linting.just
experiments/: Cargo.toml  test.html
experiments/src/: extractor.rs  main.rs
src/: assets.rs  main.rs  state.rs
src/extractor/: datefinder.rs  mod.rs  sentence_finder.rs
src/view/: mod.rs
src/view/extraction/: control.rs  extracted.rs  mod.rs  reports.rs
