[package]
name = "jobs"
version = "0.3.0"
edition = "2021"
authors = ["Silen Locatelli"]

[dependencies]
rocket ={version = "0.5.0"}
maud = {version = "0.26"}
static_hero_icons = "0.3.0"
include_directory = "0.1.1"
regex = "1.11.1"

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["http2", "charset", "rustls-tls"]