[package]
name = "jobs"
version = "0.5.0"
edition = "2021"
authors = ["Silen Locatelli"]

[dependencies]
rocket ={version = "0.5.0"}
maud = {version = "0.27"}
static_hero_icons = "0.3.0"
include_directory = "0.1.1"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
urlencoding = "2.1.3"

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["http2", "charset", "rustls-tls"]
